# PCT

./: .clang-format  .gitignore  CMakeLists.txt  CTestConfig.cmake  ITKKWStyleFiles.txt.in  LICENSE  README.md  conf.py  index.md  itk-module.cmake  pctEnergyAdaptiveMLPFunction.h  pctEnergyAdaptiveMLPFunction.txx  pctPolynomialMLPFunction.h  pctPolynomialMLPFunction.hxx  pctProtonPairsToDistanceDrivenProjection.txx  pctpaircuts.cxx  pctpairprotonsLMU_IMPCT.cxx  pctpairprotonsLomaLinda.cxx  pyproject.toml
.github/workflows/: build-test-package.yml  clang-format-linter.yml
applications/: CMakeLists.txt
applications/pctbackprojectionbinning/: CMakeLists.txt  pctbackprojectionbinning.cxx
applications/pctbackprojections/: CMakeLists.txt  pctbackprojections.cxx
applications/pctbinning/: CMakeLists.txt  pctbinning.cxx
applications/pctfdk/: CMakeLists.txt  pctfdk.cxx
applications/pctfdktwodweights/: CMakeLists.txt  pctfdktwodweights.cxx  pctfdktwodweights.py
applications/pctfillholl/: CMakeLists.txt  pctfillholl.cxx
applications/pctmostlikelypath/: CMakeLists.txt  pctmostlikelypath.cxx
applications/pctpairarithm/: CMakeLists.txt  pctpairarithm.cxx
applications/pctpaircuts/: CMakeLists.txt  pctpaircuts.cxx
applications/pctpairgeometry/: CMakeLists.txt  pctpairgeometry.cxx
applications/pctparkershortscanweighting/: CMakeLists.txt  pctparkershortscanweighting.cxx
applications/pctprojections/: CMakeLists.txt  pctprojections.cxx
applications/pctschulte/: CMakeLists.txt  pctschulte.cxx
applications/pctswapcoordinates/: CMakeLists.txt  pctswapcoordinates.cxx
applications/pctzengbackprojections/: CMakeLists.txt  pctzengbackprojections.cxx
cmake/: FindGengetopt.cmake
cmake/Hooks/: pre-commit
cmake/KWStyle/: PCT.kws.xml  PCTHeader.h
documentation/docs/: CMakeLists.txt  copy_and_fetch_sphinx_doc_files.cmake  getting_started.md  installation.md
documentation/docs/ExternalData/: protonct.png.sha512  vv.png.sha512
examples/: CMakeLists.txt  MyFilterApplicationWholePipeline.cxx  MyFilterApplicationWholePipeline.py
gate/: protonct.py
include/: SmallHoleFiller.h  SmallHoleFiller.hxx  itkMinimalStandardRandomVariateGenerator.h  itkMyFilter.h  pctBetheBlochFunctor.h  pctDDParkerShortScanImageFilter.h  pctDDParkerShortScanImageFilter.hxx  pctEnergyAdaptiveMLPFunction.h  pctEnergyStragglingFunctor.h  pctFDKDDBackProjectionImageFilter.h  pctFDKDDBackProjectionImageFilter.hxx  pctFDKDDConeBeamReconstructionFilter.h  pctFDKDDConeBeamReconstructionFilter.hxx  pctFDKDDWeightProjectionFilter.h  pctFDKDDWeightProjectionFilter.hxx  pctMostLikelyPathFunction.h  pctPhysicalConstants.h  pctPolynomialMLPFunction.h  pctProtonPairsToBackProjection.h  pctProtonPairsToBackProjection.hxx  pctProtonPairsToDistanceDrivenProjection.h  pctProtonPairsToDistanceDrivenProjection.hxx  pctSchulteMLPFunction.h  pctThirdOrderPolynomialMLPFunction.h  pctThirdOrderPolynomialMLPFunction.hxx  pctZengBackProjectionImageFilter.h  pctZengBackProjectionImageFilter.hxx
include/CLHEP/Units/: PhysicalConstants.h  SystemOfUnits.h
src/: CMakeLists.txt  pctEnergyAdaptiveMLPFunction.cxx  pctPolynomialMLPFunction.cxx  pctSchulteMLPFunction.cxx
test/: CMakeLists.txt  pctOutputArgumentWrapping.py  pctPairProtonsTest.py  pctProtonPairsToDistanceDrivenProjectionTest.cxx  pctPythonWrappingInstantiationTest.py
test/Baseline/: projections0000.mhd.sha512  projections0000.raw.sha512
test/Input/: pairs0000.mhd.sha512  pairs0000.raw.sha512
utilities/: SetupForDevelopment.sh
wrapping/: CMakeLists.txt  MostLikelyPathFunction.i  itkImageFileWriterPCT.wrap  itkInPlaceImageFilterPCT.wrap  pctBetheBlochFunctor.wrap  pctDDParkerShortScanImageFilter.wrap  pctEnergyStragglingFunctor.wrap  pctFDKDDBackProjectionImageFilter.wrap  pctFDKDDConeBeamReconstructionFilter.wrap  pctFDKDDWeightProjectionFilter.wrap  pctMostLikelyPathFunction.wrap  pctPolynomialMLPFunction.wrap  pctProtonPairsToBackProjection.wrap  pctProtonPairsToDistanceDrivenProjection.wrap  pctSchulteMLPFunction.wrap  pctSmallHoleFiller.wrap  pctThirdOrderPolynomialMLPFunction.wrap  pctZengBackProjectionImageFilter.wrap  rtkProjectionsReaderPCT.wrap
