find_package(Gengetopt REQUIRED)

add_subdirectory(pctpaircuts)
add_subdirectory(pctpairgeometry)
add_subdirectory(pctmostlikelypath)
add_subdirectory(pctbinning)
add_subdirectory(pctfillholl)
add_subdirectory(pctbackprojectionbinning)
add_subdirectory(pctzengbackprojections)
add_subdirectory(pctparkershortscanweighting)
add_subdirectory(pctprojections)
add_subdirectory(pctbackprojections)
add_subdirectory(pctfdktwodweights)
add_subdirectory(pctfdk)
add_subdirectory(pctschulte)
add_subdirectory(pctswapcoordinates)
add_subdirectory(pctpairarithm)

if(BUILD_TESTING)
endif()